cloud-native/kubernetes/deployment-gateway-api-aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: gwad
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: gwad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo:1.0
          args:
            - "-text=Hello im Gateway API deployed on EKS!"
            - "-listen=:8080"
          ports:
            - containerPort: 8080
